--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
+    "less": "^3.10.2",
+    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
@@ -42,6 +44,7 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.5.5",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
